changed some styles

--- a/backend/templates/partials/base.html
+++ b/backend/templates/partials/base.html
@@ -7,8 +7,13 @@
   href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat&family=Open+Sans:wght@500&display=swap"
   rel="stylesheet"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=Lato&family=Lexend:wght@500&display=swap"
+  rel="stylesheet"
+/>
+
 <body>
-  <div class="container mx-auto px-6 py-8">
+  <div class="container mx-auto px-6 py-20">
     {% block content %} {% endblock %}
   </div>
 
