--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -2,12 +2,12 @@
 content %}
 
 <body>
-  <div class="flex flex-col space-y-6 ...">
-    <h1 class="text-center text-6xl font-semibold mb-4 font-display">
+  <div class="flex flex-col space-y-12">
+    <h1 class="text-center text-6xl mb-0 font-semibold font-display">
       Webtoon Finder
     </h1>
 
-    <div class="mx-52">
+    <div class="md:mx-52">
       <form class="flex items-center">
         <label for="simple-search" class="sr-only">Search</label>
         <div class="relative w-full">
@@ -30,7 +30,7 @@ content %}
           </div>
           <input
             type="text"
-            id="simple-search"
+            id="filter-text-val"
             class="text-lg bg-gray-50 border border-gray-300 text-gray-900 rounded-full focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5"
             placeholder="Search for a Webtoon..."
             required
@@ -38,7 +38,8 @@ content %}
         </div>
         <button
           type="submit"
-          class="p-2.5 ml-2 text-lg font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300"
+          onclick="filterText(event)"
+          class="p-2.5 ml-2 text-lg font-medium text-white bg-green-700 rounded-lg border border-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300"
         >
           <svg
             class="w-6 h-6"
@@ -58,15 +59,21 @@ content %}
         </button>
       </form>
     </div>
+
+    <div id="answer-box" class="mt-20 grid grid-cols-3 gap-5"></div>
   </div>
 </body>
 
 {% endblock %} {% block scripts %}
 <script>
   function answerBoxTemplate(title, summary) {
-    return `<div class=''>
-              <h3>${title}</h3>
+    return `<div class='border border-gray-200 shadow-lg rounded-lg'>
+              <div class='w-full p-4 bg-green-200'>
+              <h3 class='text-xl font-semibold text-center'>${title}</h3>
+              </div>
+              <div class='p-6'>
               <p>${summary}</p>
+              </div>
           </div>`;
   }
 
@@ -74,7 +81,8 @@ content %}
     document.getElementById("filter-text-val").focus();
   }
 
-  function filterText() {
+  function filterText(e) {
+    e.preventDefault();
     document.getElementById("answer-box").innerHTML = "";
     console.log(document.getElementById("filter-text-val").value);
     fetch(
@@ -85,7 +93,8 @@ content %}
     )
       .then((response) => response.json())
       .then((data) => {
-        data.forEach((row) => {
+        let newData = data["webtoons"];
+        newData.forEach((row) => {
           let tempDiv = document.createElement("div");
           tempDiv.innerHTML = answerBoxTemplate(row.title, row.summary);
           document.getElementById("answer-box").appendChild(tempDiv);
